--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,1 +1,30 @@
-<p>menu works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/']">Charts App</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li *ngFor="let menuItem of menuItems" class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            [routerLink]="[menuItem.path]"
+            routerLinkActive="active"
+          >
+            {{ menuItem.text }}
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
