--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <app-menu></app-menu>
     </div>
   </div>
-  <div class="row">
+  <div class="row mt-4">
     <div class="col-12">
       <router-outlet></router-outlet>
     </div>
