--- a/src/app/charts/pages/bar/bar.component.html
+++ b/src/app/charts/pages/bar/bar.component.html
@@ -1,3 +1,6 @@
+<h1>Bar chart</h1>
+<hr />
+
 <div class="row">
   <div class="col">
     <div style="display: block">
@@ -11,6 +14,13 @@
       >
       </canvas>
     </div>
-    <button class="btn btn-primary" (click)="randomize()">Update</button>
+  </div>
+</div>
+
+<div class="row mt-4">
+  <div class="col">
+    <button class="btn btn-primary float-end mt-4" (click)="randomize()">
+      Update
+    </button>
   </div>
 </div>
