--- a/src/app/charts/pages/double-bar/double-bar.component.html
+++ b/src/app/charts/pages/double-bar/double-bar.component.html
@@ -1,1 +1,7 @@
-<p>double-bar works!</p>
+<h1>Double bar charts</h1>
+<hr />
+
+<div class="row">
+  <div class="col-md-6"><app-bar-chart></app-bar-chart></div>
+  <div class="col-md-6"><app-bar-chart></app-bar-chart></div>
+</div>
