--- a/src/app/charts/pages/donut/donut.component.html
+++ b/src/app/charts/pages/donut/donut.component.html
@@ -1,1 +1,16 @@
-<p>donut works!</p>
+<h1>Donut chart</h1>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <div style="display: block">
+      <canvas
+        baseChart
+        [data]="doughnutChartData"
+        [labels]="doughnutChartLabels"
+        [chartType]="doughnutChartType"
+      >
+      </canvas>
+    </div>
+  </div>
+</div>
