--- a/src/app/charts/pages/http-donut/http-donut.component.html
+++ b/src/app/charts/pages/http-donut/http-donut.component.html
@@ -1,1 +1,25 @@
-<p>http-donut works!</p>
+<h1>Http Donut chart</h1>
+<hr />
+
+<div
+  *ngIf="doughnutChartData.length === 0; else chartDiv"
+  class="alert alert-info"
+>
+  Loading data...
+</div>
+
+<ng-template #chartDiv>
+  <div class="row">
+    <div class="col">
+      <div style="display: block">
+        <canvas
+          baseChart
+          [data]="doughnutChartData"
+          [labels]="doughnutChartLabels"
+          [chartType]="doughnutChartType"
+        >
+        </canvas>
+      </div>
+    </div>
+  </div>
+</ng-template>
